Apply changes for SEO

--- a/index.html
+++ b/index.html
@@ -2,18 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>山东省实验中学东校 - 2010</title>
+  <title>山东省实验中学东校 | High School Photo Gallery</title>
+  <meta name="description" content="High School Art Gallery — exhibition photos and student artwork from 山东省实验中学东校. Browse thumbnails and full-size images from the 2010 collection.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://hanjunt.github.io/high-school-gallery/">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="shortcut icon" href="favicon.svg">
   <link rel="apple-touch-icon" href="favicon.svg">
   <meta name="theme-color" content="#2b6cb0">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="High School Art Gallery — 山东省实验中学东校">
+  <meta property="og:description" content="Browse student artwork and exhibition photos from the 2010 collection.">
+  <meta property="og:url" content="https://hanjunt.github.io/high-school-gallery/">
+  <meta property="og:image" content="https://hanjunt.github.io/high-school-gallery/images/thumbs/001.JPG">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="High School Art Gallery — 山东省实验中学东校">
+  <meta name="twitter:description" content="Browse student artwork and exhibition photos from the 2010 collection.">
+  <meta name="twitter:image" content="https://hanjunt.github.io/high-school-gallery/images/thumbs/001.JPG">
+
+  <!-- Structured data: ImageGallery -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ImageGallery",
+    "name": "High School Art Gallery — 山东省实验中学东校",
+    "url": "https://hanjunt.github.io/high-school-gallery/",
+    "description": "Student artwork and exhibition photos from the 2010 collection.",
+    "image": [
+      "https://hanjunt.github.io/high-school-gallery/images/full/001.JPG"
+    ]
+  }
+  </script>
 </head>
 <body>
 
 <header class="header">
-  <h1 class="title">山东省实验中学东校 - 2010</h1>
+  <div class="site-brand">
+    <h1 class="title">山东省实验中学东校</h1>
+    <p class="lead">2010年左右 - 山东济南郭店 - 点击观看原图</p>
+  </div>
 
   <button id="theme-toggle" aria-label="Toggle dark/light mode">
     🌙
