--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <div class="lightbox" id="lightbox">
   <span class="close">&times;</span>
   <img class="lightbox-img" src="" alt="">
+  <div class="spinner" aria-hidden="true"></div>
 </div>
 
 <script src="js/gallery.js"></script>
